Istio-ingress-gateway-internal.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: store-admin-gateway-internal
spec:
  selector:
    istio: aks-istio-ingressgateway-internal
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
